--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -39,7 +39,7 @@
 <article class="post shadow rounded">
     <img class="img post__image" src="" alt="">
     <span class="post__info">
-        <a href="">Заметки</a> 12 апреля 2023
+        <a href="">Заметки</a> 12 апреля 2023.
     </span>
     <h2 class="post__title">Lorem ipsum dolor sit amet.</h2>
     <div class="post__content">
