--- a/templates/main/sidebar.html
+++ b/templates/main/sidebar.html
@@ -1,7 +1,15 @@
 <div class="list__item tags shadow rounded">
     <div class="tag_list">
-        <div class="list tag_list__item"><a href="">Django</a></div>
-        <div class="list tag_list__item"><a href="">Css</a></div>
-        <div class="list tag_list__item"><a href="">Python</a></div>
+        {% for item in tags %}
+        <div class="list tag_list__item"><a href="">{{ item.name }}</a></div>
+        {% endfor %}
+    </div>
+</div>
+
+<div class="list__item tags shadow rounded">
+    <div class="tag_list">
+        {% for item in rubrics %}
+        <div class="list tag_list__item"><a href="">{{ item.name }}</a></div>
+        {% endfor %}
     </div>
 </div>
