--- a/templates/main/header.html
+++ b/templates/main/header.html
@@ -3,11 +3,11 @@
 </div>
 
 <nav class="list--horizontal nav">
-    {% url 'main:home' as home_url %}
+    {% url 'blog:post-list' as home_url %}
     <div class="list__item nav__item {% if request.path == home_url %}nav__item--active{% endif %}"><a class="link nav_link" href="{{ home_url }}">Главная</a></div>
-    <div class="list__item nav__item"><a class="link nav_link" href="{% url 'main:home' %}">Портфолио</a></div>
-    <div class="list__item nav__item"><a class="link nav_link" href="{% url 'main:home' %}">О себе</a></div>
-    <div class="list__item nav__item"><a class="link nav_link" href="{% url 'main:home' %}">Контакты</a></div>
+    <div class="list__item nav__item"><a class="link nav_link" href="{% url 'blog:post-list' %}">Портфолио</a></div>
+    <div class="list__item nav__item"><a class="link nav_link" href="{% url 'blog:post-list' %}">О себе</a></div>
+    <div class="list__item nav__item"><a class="link nav_link" href="{% url 'blog:post-list' %}">Контакты</a></div>
 </nav>
 
 <form class="form search_form" action="">
