--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -9,7 +9,7 @@
     <span class="post__info">
         <a href="">{{item.rubric}}</a> {{ item.created|date }}
     </span>
-    <h2 class="post__title"><a href="{% url 'main:post_detail' slug=item.slug %}">{{ item.title }}</a></h2>
+    <h2 class="post__title"><a href="{% url 'blog:post-detail' slug=item.slug %}">{{ item.title }}</a></h2>
     <div class="post__content">
         {{ item.content|safe|slice:":500" }}...
     </div>
